--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,294 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesli Konuşma Uygulaması</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="script.js" defer></script>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+            width: 800px;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Common inputs & buttons */
+        input {
+            padding: 12px;
+            border-radius: 6px;
+            border: 1px solid #333;
+            background-color: #2d2d2d;
+            color: white;
+            font-size: 1rem;
+            outline: none;
+        }
+
+        input:focus {
+            border-color: #4CAF50;
+        }
+
+        button {
+            padding: 12px;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: all 0.2s;
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .hidden {
+            display: none !important;
+        }
+
+        /* Login & Lobby Centering */
+        #login-screen,
+        #lobby-screen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            gap: 20px;
+        }
+
+        .room-list {
+            display: flex;
+            gap: 15px;
+        }
+
+        .room-btn {
+            width: 100px;
+            height: 100px;
+            background-color: #007bff;
+            font-size: 1.2rem;
+        }
+
+        .room-btn:hover {
+            background-color: #0056b3;
+        }
+
+        /* Room Layout */
+        .room-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #333;
+            padding-bottom: 15px;
+            margin-bottom: 15px;
+        }
+
+        .mini-btn {
+            padding: 5px 15px;
+            background-color: #f44336;
+            font-size: 0.9rem;
+        }
+
+        .main-content {
+            display: flex;
+            flex: 1;
+            gap: 20px;
+            overflow: hidden;
+        }
+
+        .sidebar {
+            width: 200px;
+            background-color: #252525;
+            border-radius: 8px;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .sidebar h3 {
+            margin-top: 0;
+            font-size: 1rem;
+            color: #aaa;
+            border-bottom: 1px solid #333;
+            padding-bottom: 5px;
+        }
+
+        #user-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            overflow-y: auto;
+        }
+
+        #user-list li {
+            padding: 8px;
+            border-bottom: 1px solid #333;
+        }
+
+        .chat-area {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        #chat-messages {
+            flex: 1;
+            background-color: #252525;
+            border-radius: 8px;
+            padding: 10px;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .message {
+            font-size: 0.95rem;
+        }
+
+        .message strong {
+            color: #4CAF50;
+        }
+
+        .message.system {
+            color: #aaa;
+            font-style: italic;
+            font-size: 0.85rem;
+            text-align: center;
+        }
+
+        #chat-form {
+            display: flex;
+            gap: 10px;
+        }
+
+        #msg-input {
+            flex: 1;
+        }
+
+        .controls {
+            margin-top: 10px;
+        }
+
+        #mute-btn {
+            width: 100%;
+            background-color: #4CAF50;
+        }
+
+        #mute-btn.muted {
+            background-color: #f44336;
+        }
+
+        /* Volume Slider */
+        .volume-control {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            margin-top: 5px;
+        }
+
+        .volume-control input[type=range] {
+            width: 100px;
+            padding: 0;
+            margin: 0;
+            height: 5px;
+        }
+
+        /* Screen Share Button */
+        #share-screen-btn {
+            background-color: #2196F3;
+            margin-top: 10px;
+        }
+
+        #share-screen-btn.sharing {
+            background-color: #f44336;
+            /* Red when sharing to stop */
+        }
+
+        /* Video Grid (Screen Share) */
+        #video-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 10px;
+            margin-top: 20px;
+        }
+
+        video {
+            width: 100%;
+            border-radius: 8px;
+            background: #000;
+        }
+
+        /* Modal */
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background: #252525;
+            padding: 20px;
+            border-radius: 12px;
+            width: 80%;
+            max-height: 80%;
+            overflow-y: auto;
+        }
+
+        .source-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 15px;
+            margin-top: 15px;
+        }
+
+        .source-item {
+            cursor: pointer;
+            text-align: center;
+            padding: 10px;
+            border-radius: 8px;
+            transition: bg 0.2s;
+        }
+
+        .source-item:hover {
+            background: #333;
+        }
+
+        .source-item img {
+            width: 100%;
+            border-radius: 4px;
+        }
+
+        .source-item p {
+            margin: 5px 0 0;
+            font-size: 0.8rem;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
 
 <body>
@@ -41,19 +326,31 @@
                 <div class="sidebar">
                     <h3>Kullanıcılar</h3>
                     <ul id="user-list"></ul>
+                    <div class="controls">
+                        <button id="mute-btn" class="control-btn">Mikrofon Açık</button>
+                        <button id="share-screen-btn" class="control-btn">Ekran Paylaş</button>
+                    </div>
                 </div>
 
                 <!-- Chat & Controls -->
                 <div class="chat-area">
+                    <div id="video-grid"></div> <!-- Screen Shares appear here -->
                     <div id="chat-messages"></div>
                     <form id="chat-form">
                         <input type="text" id="msg-input" placeholder="Mesaj yaz..." autocomplete="off">
                         <button type="submit">Gönder</button>
                     </form>
-                    <div class="controls">
-                        <button id="mute-btn" class="control-btn">Mikrofon Açık</button>
-                    </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- Screen Share Modal -->
+        <div id="source-modal" class="modal hidden">
+            <div class="modal-content">
+                <h2>Ekran Seçin</h2>
+                <div class="source-grid" id="source-grid"></div>
+                <button onclick="document.getElementById('source-modal').classList.add('hidden')"
+                    style="margin-top:20px; background:#f44336;">İptal</button>
             </div>
         </div>
     </div>
