--- a/public/index.html
+++ b/public/index.html
@@ -1,359 +1,252 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sesli Konuşma Uygulaması</title>
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <title>Voice App</title>
+    <script src="socket.io.min.js"></script>
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: #1e1e1e;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
-            width: 800px;
-            height: 600px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Common inputs & buttons */
-        input {
-            padding: 12px;
-            border-radius: 6px;
+        /* ADMIN EXTRAS */
+        .context-menu {
+            position: absolute;
+            background: #252525;
             border: 1px solid #333;
-            background-color: #2d2d2d;
-            color: white;
-            font-size: 1rem;
-            outline: none;
-        }
-
-        input:focus {
-            border-color: #4CAF50;
-        }
-
-        button {
-            padding: 12px;
-            border: none;
             border-radius: 6px;
+            padding: 5px 0;
+            width: 150px;
+            z-index: 9999;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .context-item {
+            padding: 8px 15px;
             cursor: pointer;
-            font-size: 1rem;
-            transition: all 0.2s;
-            background-color: #4CAF50;
+            font-size: 0.9rem;
+            color: #ccc;
+        }
+
+        .context-item:hover {
+            background: #4CAF50;
             color: white;
         }
 
-        button:hover {
-            background-color: #45a049;
+        .context-divider {
+            height: 1px;
+            background: #444;
+            margin: 4px 0;
         }
 
-        .hidden {
-            display: none !important;
-        }
-
-        /* Login & Lobby Centering */
-        #login-screen,
-        #lobby-screen {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            gap: 20px;
-        }
-
-        .room-list {
-            display: flex;
-            gap: 15px;
-        }
-
-        .room-btn {
-            width: 100px;
-            height: 100px;
-            background-color: #007bff;
-            font-size: 1.2rem;
-        }
-
-        .room-btn:hover {
-            background-color: #0056b3;
-        }
-
-        /* Room Layout */
-        .room-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #333;
-            padding-bottom: 15px;
-            margin-bottom: 15px;
-        }
-
-        .mini-btn {
-            padding: 5px 15px;
-            background-color: #f44336;
-            font-size: 0.9rem;
-        }
-
-        .main-content {
-            display: flex;
-            flex: 1;
-            gap: 20px;
-            overflow: hidden;
-        }
-
-        .sidebar {
-            width: 200px;
-            background-color: #252525;
-            border-radius: 8px;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .sidebar h3 {
-            margin-top: 0;
-            font-size: 1rem;
-            color: #aaa;
-            border-bottom: 1px solid #333;
-            padding-bottom: 5px;
-        }
-
-        #user-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            overflow-y: auto;
-        }
-
-        #user-list li {
-            padding: 8px;
-            border-bottom: 1px solid #333;
-        }
-
-        .chat-area {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        #chat-messages {
-            flex: 1;
-            background-color: #252525;
-            border-radius: 8px;
-            padding: 10px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .message {
-            font-size: 0.95rem;
-        }
-
-        .message strong {
-            color: #4CAF50;
-        }
-
-        .message.system {
-            color: #aaa;
-            font-style: italic;
-            font-size: 0.85rem;
+        .admin-key-input {
+            margin-top: 15px;
+            border: 1px dashed #444;
             text-align: center;
         }
 
-        #chat-form {
-            display: flex;
-            gap: 10px;
-        }
-
-        #msg-input {
-            flex: 1;
-        }
-
-        .controls {
-            margin-top: 10px;
-        }
-
-        #mute-btn {
-            width: 100%;
-            background-color: #4CAF50;
-        }
-
-        #mute-btn.muted {
-            background-color: #f44336;
-        }
-
-        /* Volume Slider */
-        .volume-control {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            margin-top: 5px;
-        }
-
-        .volume-control input[type=range] {
-            width: 100px;
-            padding: 0;
-            margin: 0;
-            height: 5px;
-        }
-
-        /* Screen Share Button */
-        #share-screen-btn {
-            background-color: #2196F3;
-            margin-top: 10px;
-        }
-
-        #share-screen-btn.sharing {
-            background-color: #f44336;
-            /* Red when sharing to stop */
-        }
-
-        /* Video Grid (Screen Share) */
-        #video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 10px;
-            margin-top: 20px;
-        }
-
-        video {
-            width: 100%;
-            border-radius: 8px;
-            background: #000;
-        }
-
-        /* Modal */
-        .modal {
+        /* MODALS */
+        .modal-overlay {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.8);
+            z-index: 2000;
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1000;
         }
 
-        .modal-content {
-            background: #252525;
+        .modal-box {
+            background: #222;
             padding: 20px;
-            border-radius: 12px;
-            width: 80%;
-            max-height: 80%;
-            overflow-y: auto;
-        }
-
-        .source-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .source-item {
-            cursor: pointer;
-            text-align: center;
-            padding: 10px;
             border-radius: 8px;
-            transition: bg 0.2s;
+            width: 400px;
+            border: 1px solid #444;
         }
 
-        .source-item:hover {
-            background: #333;
+        .modal-header {
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+            border-bottom: 1px solid #333;
+            padding-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
         }
 
-        .source-item img {
-            width: 100%;
-            border-radius: 4px;
+        .ban-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 8px;
+            border-bottom: 1px solid #333;
         }
 
-        .source-item p {
-            margin: 5px 0 0;
+        .lock-icon {
             font-size: 0.8rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            margin-left: 5px;
+            color: #FFD700;
+        }
+
+        .role-badge {
+            background: #4CAF50;
+            color: white;
+            font-size: 0.7rem;
+            padding: 2px 6px;
+            border-radius: 4px;
+            margin-left: 5px;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <!-- 1. LOGIN SCREEN -->
-        <div id="login-screen">
-            <h1>Sesli Sohbet Giriş</h1>
-            <input type="text" id="username-input" placeholder="Kullanıcı Adı" autofocus>
-            <button id="login-btn">Giriş Yap</button>
+
+    <!-- CUSTOM TITLE BAR -->
+    <div class="title-bar">
+        <div class="app-title">VoiceChat Pro <span id="my-role-badge"
+                style="display:none; color:#4CAF50; font-size:0.7rem; margin-left:10px;">[ADMIN]</span></div>
+        <div class="window-controls">
+            <button id="min-btn">-</button>
+            <button id="close-btn">x</button>
+        </div>
+    </div>
+
+    <!-- MAIN APP CONTAINER -->
+    <div class="app-container">
+
+        <!-- SIDEBAR -->
+        <div class="sidebar">
+            <div class="user-profile-summary">
+                <img id="my-avatar-preview-mini" src="" class="avatar-mini hidden">
+                <span id="my-username-display"></span>
+            </div>
+            <h3>ODALAR</h3>
+            <div id="room-list-container"></div>
+
+            <hr style="border-color: #333; margin-top:20px;">
+            <button id="btn-ban-list" class="hidden" style="margin-top:10px; background: #d32f2f;">🚫 Ban
+                Listesi</button>
         </div>
 
-        <!-- 2. LOBBY SCREEN -->
-        <div id="lobby-screen" class="hidden">
-            <h1>Oda Seçimi</h1>
-            <div class="room-list">
-                <button class="room-btn" data-room="oda1">Oda 1</button>
-                <button class="room-btn" data-room="oda2">Oda 2</button>
-                <button class="room-btn" data-room="oda3">Oda 3</button>
-            </div>
-        </div>
+        <!-- MAIN CONTENT -->
+        <div class="main-content">
 
-        <!-- 3. ROOM SCREEN -->
-        <div id="room-screen" class="hidden">
-            <div class="room-header">
-                <h2>Oda: <span id="current-room-name"></span></h2>
-                <button id="leave-btn" class="mini-btn">Çıkış</button>
+            <!-- ADMIN CONTEXT MENU -->
+            <div id="context-menu" class="context-menu hidden">
+                <div class="context-item" id="ctx-promote">⭐ Yetki Ver (Admin)</div>
+                <div class="context-divider"></div>
+                <div class="context-item" id="ctx-mute">🎤 Sustur</div>
+                <div class="context-item" id="ctx-kick">👢 Kick (At)</div>
+                <div class="context-item" id="ctx-ban" style="color:#ef5350;">🚫 Ban (Yasakla)</div>
             </div>
 
-            <div class="main-content">
-                <!-- User List Sidebar -->
-                <div class="sidebar">
-                    <h3>Kullanıcılar</h3>
-                    <ul id="user-list"></ul>
-                    <div class="controls">
-                        <button id="mute-btn" class="control-btn">Mikrofon Açık</button>
-                        <button id="share-screen-btn" class="control-btn">Ekran Paylaş</button>
+            <!-- LOGIN OVERLAY -->
+            <div id="login-overlay" class="overlay">
+                <div class="login-card">
+                    <h2>Hoşgeldiniz</h2>
+
+                    <div class="avatar-selection">
+                        <div style="position: relative; cursor: pointer;"
+                            onclick="document.getElementById('avatar-file-input').click()">
+                            <img id="avatar-preview" src="https://cdn-icons-png.flaticon.com/512/847/847969.png"
+                                alt="Avatar">
+                            <div
+                                style="position: absolute; bottom: 0; right: 0; background: #4CAF50; border-radius: 50%; padding: 5px;">
+                                <i class="fas fa-camera" style="color: white; font-size: 12px;">📷</i>
+                            </div>
+                        </div>
+                        <input type="file" id="avatar-file-input" accept="image/*" hidden>
+                        <p style="font-size: 0.8rem; color: #888; margin-top: 5px;">Fotoğraf değiştirmek için tıklayın
+                        </p>
+                    </div>
+
+                    <input type="text" id="username-input" placeholder="Kullanıcı Adı" maxlength="15">
+
+                    <input type="password" id="admin-key-input" class="admin-key-input"
+                        placeholder="Admin Anahtarı (Opsiyonel)">
+
+                    <button id="login-btn" style="margin-top:15px;">Giriş Yap</button>
+                </div>
+            </div>
+
+            <!-- PASSWORD PROMPT MODAL -->
+            <div id="password-modal" class="modal-overlay hidden">
+                <div class="modal-box" style="width:300px; text-align:center;">
+                    <h3>Oda Şifresi</h3>
+                    <input type="password" id="room-pass-input" placeholder="Şifre Giriniz">
+                    <button id="btn-submit-pass">Onayla</button>
+                    <button onclick="document.getElementById('password-modal').classList.add('hidden')"
+                        style="background:#555; margin-top:10px;">İptal</button>
+                </div>
+            </div>
+
+            <!-- BAN LIST MODAL -->
+            <div id="ban-list-modal" class="modal-overlay hidden">
+                <div class="modal-box">
+                    <div class="modal-header">
+                        <span>Yasaklı Kullanıcılar</span>
+                        <span style="cursor:pointer;"
+                            onclick="document.getElementById('ban-list-modal').classList.add('hidden')">X</span>
+                    </div>
+                    <div id="ban-list-content"></div>
+                </div>
+            </div>
+
+            <!-- ROOM CONFIG MODAL -->
+            <div id="room-config-modal" class="modal-overlay hidden">
+                <div class="modal-box">
+                    <div class="modal-header">
+                        <span id="config-room-name-title">Oda Ayarları</span>
+                        <span style="cursor:pointer;"
+                            onclick="document.getElementById('room-config-modal').classList.add('hidden')">X</span>
+                    </div>
+                    <p style="font-size:0.8rem; color:#aaa;">Oda İsmi Değiştir:</p>
+                    <input type="text" id="conf-room-name">
+
+                    <p style="font-size:0.8rem; color:#aaa; margin-top:10px;">Şifre (Boş bırakırsanız kalkar):</p>
+                    <input type="text" id="conf-room-pass" placeholder="Yeni Şifre">
+
+                    <button id="btn-save-room-conf" style="margin-top:15px;">Kaydet</button>
+                </div>
+            </div>
+
+
+            <!-- ACTIVE ROOM VIEW -->
+            <div id="active-room-view" class="hidden">
+                <div class="room-header-display">
+                    <h2 id="current-room-title">Oda Seçiniz</h2>
+                </div>
+
+                <div class="split-view">
+                    <!-- VIDEO / USER GRID -->
+                    <div class="video-section">
+                        <div id="video-grid"></div>
+                    </div>
+
+                    <!-- CHAT -->
+                    <div class="chat-section">
+                        <div id="chat-messages"></div>
+                        <form id="chat-form">
+                            <input type="text" id="msg-input" placeholder="Mesaj yaz..." autocomplete="off">
+                            <button type="submit">Gönder</button>
+                        </form>
                     </div>
                 </div>
 
-                <!-- Chat & Controls -->
-                <div class="chat-area">
-                    <div id="video-grid"></div> <!-- Screen Shares appear here -->
-                    <div id="chat-messages"></div>
-                    <form id="chat-form">
-                        <input type="text" id="msg-input" placeholder="Mesaj yaz..." autocomplete="off">
-                        <button type="submit">Gönder</button>
-                    </form>
+                <!-- BOTTOM CONTROLS -->
+                <div class="bottom-controls">
+                    <button id="mute-btn" class="control-btn secondary">🎤 Mikrofon Açık</button>
+                    <button id="share-screen-btn" class="control-btn accent">🖥️ Ekran Paylaş</button>
                 </div>
             </div>
-        </div>
 
-        <!-- Screen Share Modal -->
-        <div id="source-modal" class="modal hidden">
-            <div class="modal-content">
-                <h2>Ekran Seçin</h2>
-                <div class="source-grid" id="source-grid"></div>
-                <button onclick="document.getElementById('source-modal').classList.add('hidden')"
-                    style="margin-top:20px; background:#f44336;">İptal</button>
-            </div>
         </div>
     </div>
+
+    <div id="audio-container"></div>
 </body>
 
 </html>
