--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFVoice</title>
+    <title>OmniVoice</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -106,7 +106,7 @@
 
     <!-- CUSTOM TITLE BAR -->
     <div class="title-bar">
-        <div class="app-title">GFVoice <span id="my-role-badge"
+        <div class="app-title">OmniVoice <span id="my-role-badge"
                 style="display:none; color:#4CAF50; font-size:0.7rem; margin-left:10px;">[ADMIN]</span></div>
         <div class="window-controls">
             <button id="min-btn">-</button>
@@ -139,6 +139,28 @@
             </div>
             <h3>ODALAR</h3>
             <div id="room-list-container"></div>
+
+            <hr style="border-color: #333; margin-top:20px;">
+
+            <!-- REMOTE CONTROL PANEL -->
+            <div class="remote-control-panel"
+                style="background:#222; padding:10px; border-radius:6px; margin-top:10px;">
+                <h4 style="margin:0 0 10px 0; font-size:0.9rem; color:#4CAF50;">Uzaktan Kontrol (AnyDesk)</h4>
+
+                <div style="font-size:0.8rem; color:#aaa;">ID'niz:</div>
+                <div id="my-remote-id-display"
+                    style="font-size:1.2rem; font-weight:bold; letter-spacing:2px; margin-bottom:10px;">-</div>
+
+                <input type="text" id="target-remote-id-input" placeholder="Bağlanılacak ID"
+                    style="width:100%; box-sizing:border-box; margin-bottom:5px;">
+                <button id="btn-connect-remote" style="width:100%; font-size:0.8rem;">Bağlan</button>
+                <div id="remote-status" style="font-size:0.7rem; color:#aaa; margin-top:5px;"></div>
+                
+                <!-- FAILSAFE BUTTON -->
+                <button id="btn-force-remote-view" style="width:100%; font-size:0.7rem; margin-top:5px; background:#333; color:#888;">
+                    <i class="fas fa-external-link-alt"></i> Pencereyi Zorla Aç
+                </button>
+            </div>
 
             <hr style="border-color: #333; margin-top:20px;">
             <button id="btn-ban-list" class="hidden" style="margin-top:10px; background: #d32f2f;">🚫 Ban
@@ -180,6 +202,18 @@
                             onclick="document.getElementById('ban-list-modal').classList.add('hidden')">X</span>
                     </div>
                     <div id="ban-list-content"></div>
+                </div>
+            </div>
+
+            <!-- CONNECTION REQUEST MODAL -->
+            <div id="connection-request-modal" class="modal-overlay hidden">
+                <div class="modal-box" style="text-align:center;">
+                    <h3 style="color:#4CAF50;">Bağlantı İsteği</h3>
+                    <p id="conn-req-text">Kullanıcı (ID: 12345) ekranınızı kontrol etmek istiyor.</p>
+                    <div style="margin-top:20px; display:flex; justify-content:center; gap:10px;">
+                        <button id="btn-accept-conn" style="background:#4CAF50;">Kabul Et</button>
+                        <button id="btn-reject-conn" style="background:#f44336;">Reddet</button>
+                    </div>
                 </div>
             </div>
 
@@ -255,6 +289,80 @@
                 placeholder="Admin Anahtarı (Opsiyonel)">
 
             <button id="login-btn" style="margin-top:15px;">Giriş Yap</button>
+        </div>
+    </div>
+
+    <!-- SCREEN SHARE PICKER MODAL -->
+    <div id="screen-picker-modal" class="modal-overlay hidden">
+        <div class="modal-box" style="width: 600px;">
+            <div class="modal-header">
+                <span>Ekran veya Pencere Seçin</span>
+                <span style="cursor:pointer;" onclick="closeScreenPicker()">X</span>
+            </div>
+            <div id="screen-sources-list"
+                style="display: flex; flex-wrap: wrap; gap: 15px; max-height: 400px; overflow-y: auto;">
+                <!-- Thumbnails will be injected here -->
+            </div>
+        </div>
+    </div>
+
+    <!-- VIDEO POPOUT WINDOW -->
+    <div id="video-popout" class="hidden" style="
+        position: fixed; 
+        top: 100px; 
+        left: 100px; 
+        width: 600px; 
+        height: 400px; 
+        background: #000; 
+        border: 2px solid #444; 
+        z-index: 9999; 
+        display: flex; 
+        flex-direction: column; 
+        box-shadow: 0 10px 30px rgba(0,0,0,0.8);
+        resize: both;
+        overflow: hidden;
+        border-radius: 8px;
+    ">
+        <div id="popout-header" style="
+            background: #252525; 
+            padding: 8px 15px; 
+            cursor: move; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center;
+            border-bottom: 1px solid #444;
+            color: #eee;
+            font-weight: bold;
+            font-size: 0.9rem;
+            user-select: none;
+        ">
+            <span id="popout-title">Geniş Ekran</span>
+            <div style="display: flex; gap: 10px;">
+                <button id="popout-close" style="
+                    background: none; 
+                    border: none; 
+                    color: #fff; 
+                    cursor: pointer; 
+                    font-size: 1.1rem;
+                    font-weight: bold;
+                ">X</button>
+            </div>
+        </div>
+        <div id="popout-content" style="
+            flex: 1; 
+            position: relative; 
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        ">
+            <!-- Video will be injected here -->
+            <video id="popout-video" autoplay playsinline style="
+                width: 100%; 
+                height: 100%; 
+                object-fit: contain;
+            "></video>
         </div>
     </div>
 
