Implement Hidden Rooms feature

--- a/public/index.html
+++ b/public/index.html
@@ -245,6 +245,12 @@
                     <p style="font-size:0.8rem; color:#aaa; margin-top:10px;">Şifre (Boş bırakırsanız kalkar):</p>
                     <input type="text" id="conf-room-pass" placeholder="Yeni Şifre">
 
+                    <div style="margin-top:10px; display:flex; align-items:center;">
+                        <input type="checkbox" id="conf-room-hidden" style="margin-right:5px;">
+                        <label for="conf-room-hidden" style="color:#ccc; font-size:0.9rem; cursor:pointer;">Gizli Oda
+                            (Kullanıcılar panoda gözükmesin)</label>
+                    </div>
+
                     <button id="btn-save-room-conf" style="margin-top:15px;">Kaydet</button>
                 </div>
             </div>
