feat: Implement Push-to-Talk (Bas Konuş) feature

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,10 @@
                             class="fas fa-headphones"></i></button>
                     <button id="share-screen-btn" class="control-icon-btn" title="Ekran Paylaş"><i
                             class="fas fa-desktop"></i></button>
-                    <!-- Settings moved here too? -->
+                    <button id="settings-btn" class="control-icon-btn" title="Ayarlar"><i
+                            class="fas fa-cog"></i></button>
+                    <button id="settings-btn" class="control-icon-btn" title="Ayarlar"><i
+                            class="fas fa-cog"></i></button>
                 </div>
             </div>
             <h3>ODALAR</h3>
